display : fix on mobile

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -165,7 +165,7 @@ body {
 @media only screen and (max-width: 990px) {
   .playground-2212 {
     flex-direction: column;
-    font-size: 7px;
+    font-size: 4px;
   }
 }
 
